--- a/app/assets/stylesheets/style_pages.scss
+++ b/app/assets/stylesheets/style_pages.scss
@@ -1,7 +1,11 @@
 @import 'color';
+@import 'bootstrap';
+@import 'bootstrap-sprockets';
 
 body {
-  background: $grey-black
+  background-image: url('bg.jpg');
+  font-family: Verdana;
+  background-size: cover;
 }
 
 * {
@@ -11,7 +15,7 @@ body {
   font-family: sans-serif;
 }
 
-section {
+.main {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -52,10 +56,68 @@ ul li a::before {
   font-size: 3em;
   color: $blue;
   opacity: 0;
+  line-height: 85vh;
   padding-top: 50px;
   transition: 0.5s;
 }
 
 ul li:hover a::before {
   opacity: 1;
+}
+
+header,footer {
+  position: absolute;
+  width: 100%;
+  color: white;
+}
+
+header {
+  height: 10vh;
+
+  #logo {
+    position: absolute;
+    margin-top: 20px;
+    text-decoration: none;
+    float: left;
+    left: 20%;
+    font-size: 1.7em;
+    color: $white;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    padding-top: 9px;
+    font-weight: bold;
+  }
+
+  .nav {
+    position: absolute;
+    left: 55%;
+
+    a {
+      position: relative;
+      padding-right: 30px;
+      left: 75%;
+      top: 40px;
+      color: white;
+      text-decoration: none;
+      margin-right: 20px;
+    }
+  }
+}
+
+footer {
+  height: 15vh;
+  bottom: 0;
+  background-color: black;
+
+  h2 {
+    position: absolute;
+    left: 45%;
+  }
+
+  p {
+    position: absolute;
+    left: 48%;
+    bottom: 20px;
+    color: orange;
+  }
 }
