--- a/app/views/style_pages/home.html.erb
+++ b/app/views/style_pages/home.html.erb
@@ -1,13 +1,13 @@
 <% provide :title, t("main_title") %>
-<section>
+<div class="main">
   <ul>
     <li>
-      <a data-text = <%= t("data-text") %>
-        <%= link_to t("home.home_index"), "#" %>
+      <a data-text = <%= t("data-text") %>>
+        <%= link_to t("home.home_index"), friendcoff_path %>
         <%= link_to t("home.study_index"), "#" %>
         <%= link_to t("home.order_index"), "#" %>
-        <%= link_to t("home.about_index"), "#" %>
+        <%= link_to t("home.about_index"), about_path %>
       </a>
     </li>
   </ul>
-</section>
+</div>
