--- a/app/views/users/_signup_form.html.erb
+++ b/app/views/users/_signup_form.html.erb
@@ -15,7 +15,7 @@
   <p class="or">
     <%= t "signup.or" %>
     <p>
-      <%= link_to t("signup.login_site"), "#", class: "btn btn-primary" %>
+      <%= link_to t("signup.login_site"), signin_path, class: "btn btn-primary" %>
     </p>
   </p>
 <% end %>
