--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -58,4 +58,14 @@
     text-align: center;
     font-size: 20px;
   }
+
+  .checkbox {
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+      span {
+      font-weight: normal;
+      margin-left: 20px;
+    }
+   }
 }
