task37289_delete_user

--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>MainPages#home</h1>
-<p>Find me in app/views/main_pages/home.html.erb</p>
+<% provide :title, t("main_title") %>
+<section id="banner">
+  <div class="banner-text">
+    <h1> Friend Coffee <h1>
+    <p>Just chill and relax with your style</p>
+    <div class="banner-btn">
+      <%= link_to t("home.home_index"), friendcoff_path %>
+      <%= link_to t("home.study_index"), "#" %>
+    </div>
+  </div>
+</section>
