--- a/app/assets/stylesheets/style_pages.scss
+++ b/app/assets/stylesheets/style_pages.scss
@@ -1,12 +1,7 @@
 @import 'color';
 @import 'bootstrap';
 @import 'bootstrap-sprockets';
-
-body {
-  background-image: url('bg.jpg');
-  font-family: Verdana;
-  background-size: cover;
-}
+@import 'custom';
 
 * {
   margin: 0;
@@ -15,109 +10,125 @@ body {
   font-family: sans-serif;
 }
 
-.main {
-  position: relative;
-  width: 100%;
+body {
+  padding-top: 60px;
+}
+
+section {
+  overflow: auto;
+}
+
+#banner {
+  background: linear-gradient(rgba(0,0,0,0.5), #009688), url('banner.jpg');
+  background-size: cover;
+  background-position: center;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-ul {
-  display: flex;
-  flex-direction: column;
-
-  li {
-    list-style: none;
-
-    a {
-      display: block;
-      text-decoration: none;
-      text-align: center;
-      font-size: 3em;
-      font-weight: 700px;
-      color: $white;
-      text-transform: uppercase;
-    }
-  }
-}
-
-ul li a::before {
-  content: attr(data-text);
+.logo {
+  width: 170px;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: -1;
+  top: 1%;
+  left: 7%;
+}
+
+.banner-text {
   text-align: center;
-  font-size: 3em;
-  color: $blue;
-  opacity: 0;
-  line-height: 85vh;
-  padding-top: 50px;
-  transition: 0.5s;
-}
+  color: $white;
+  padding-top: 190px;
 
-ul li:hover a::before {
-  opacity: 1;
-}
-
-header,footer {
-  position: absolute;
-  width: 100%;
-  color: white;
-}
-
-header {
-  height: 10vh;
-
-  #logo {
-    position: absolute;
-    margin-top: 20px;
-    text-decoration: none;
-    float: left;
-    left: 20%;
-    font-size: 1.7em;
-    color: $white;
-    text-transform: uppercase;
-    letter-spacing: -1px;
-    padding-top: 9px;
-    font-weight: bold;
+  h1 {
+    font-size: 130px;
+    font-family: sans-serif;
   }
 
-  .nav {
-    position: absolute;
-    left: 55%;
+  p {
+    font-size: 20px;
+    font-style: italic;
+  }
+}
 
-    a {
-      position: relative;
-      padding-right: 30px;
-      left: 75%;
-      top: 40px;
-      color: white;
-      text-decoration: none;
-      margin-right: 20px;
+.banner-btn {
+  margin: 10px auto 0;
+
+  a {
+    font-size: 35px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0 12px;
+    padding: 16px 0;
+    color: $white;
+    border: .5px solid $white;
+  }
+}
+
+#footer {
+  padding: 1px 20px 20px;
+  background: #efefef;
+  position: relative;
+
+  .title-text {
+    text-align: center;
+  }
+  .footer-row {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    p {
+      line-height: 35px;
+    }
+
+    h1 {
+      margin: 10px 0;
     }
   }
-}
 
-footer {
-  height: 15vh;
-  bottom: 0;
-  background-color: black;
+  .footer-left,.footer-right {
+    flex-basis: 45%;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+
+  .footer-right {
+    text-align: right;
+  }
 
   h2 {
     position: relative;
     left: 45%;
   }
+}
 
-  p {
-    position: absolute;
-    left: 48%;
-    bottom: 20px;
-    color: orange;
+#error_explanation {
+  color: red;
+
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
   }
+}
+
+
+.users {
+  list-style: none;
+  margin: 0;
+
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-light;
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+.img {
+  margin-bottom: 9px;
+  text-align: center;
 }
