--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,20 @@
-<footer class="footer">
+<section id="footer">
+  <div class="title-text">
+    <h1>CONTACT</h1>
+    <h1>FRIEND COFFEE</h1>
+  </div>
+  <div class="footer-row">
+    <div class="footer-left">
+      <h1>Opening Hours</h1>
+      <p>Monday to Friday - 8am to 8pm</p>
+      <p>Saturday and Sunday - 9am to 12pm</p>
+    </div>
+    <div class="footer-right">
+      <h1>Get in touch</h1>
+      <p>59/39 Me Tri, HaNoi, VietNam</p>
+      <p>Email: contact.sub22@gmail.com</p>
+      <p>Phone: 0976808174</p>
+    </div>
+  </div>
   <h2>&copy; Copyright</h2>
-  <p>
-    <%= t "footer.text" %>
-  </p>
-  <%= link_to t(".en"), locale: :en %>
-  <%= link_to t(".vi"), locale: :vi %>
-</footer>
+</section>
