--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,41 @@
-<header>
-  <%= link_to t("base_title"), friendcoff_path, id: "logo" %>
-  <div class="nav">
-    <a>
-      <%= link_to t("home.home_index"), friendcoff_path %>
-      <%= link_to t("home.about_index"), about_path %>
-      <%= link_to t("header.signup_index"), signup_path %>
-      <% if logged_in? %>
-        <li><%= link_to t("user.text"), users_path %></li>
-        <li class="dropdown">
-          <%= link_to "#", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
-            <%= current_user.name %>
-            <b class="caret"></b>
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container">
+    <%= link_to image_tag(Settings.home.path_img, class: "logo"), friendcoff_path %>
+    <nav>
+      <%= link_to t(".en"), locale: :en %>
+      <%= link_to t(".vi"), locale: :vi %>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to t("home.home_index"), friendcoff_path %>
+        <li><%= link_to t("home.about_index"), about_path %>
+        <% if logged_in? %>
+          <% if admin_user? %>
+            <li><%= link_to t("user.text"), users_path %></li>
+            <li><%= link_to t("admin.manager.text"), "#" %></li>
           <% end %>
-          <ul class="dropdown-menu">
-            <li><%= link_to t("user.profile"), current_user %></li>
-            <li><%= link_to t("user.change_info"), "#" %></li>
-            <li class="divider"></li>
-            <li>
-              <%= link_to t("signin.signout"), signout_path, method: :delete %>
-            </li>
-          </ul>
-        </li>
-      <% else %>
-        <li><%= link_to t("signup.login_site"), signin_path %></li>
-      <% end %>
-    </a>
+          <li class="dropdown">
+            <%= link_to "#", class: "dropdown-toggle", "data-toggle": "dropdown" do %>
+              <div class="img">
+                <%= gravatar_for @current_user, size: Settings.users_helper.size_img1 %>
+                <span class="name">
+                  <%= current_user.name %>
+                  <b class="caret"></b>
+                </span>
+              </div>
+            <% end %>
+            <div class="dropdown-menu">
+              <li><%= link_to t("user.profile"), current_user %></li>
+              <li><%= link_to t("user.change_info"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("signin.signout"), signout_path, method: :delete %>
+              </li>
+            </div>
+          </li>
+        <% else %>
+          <li><%= link_to t("header.signup_index"), signup_path %> /
+          <li><%= link_to t("signup.login_site"), signin_path %></li>
+        <% end %>
+      </ul>
+    </nav>
   </div>
 </header>
