--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,14 +16,20 @@
   @include box_sizing;
 }
 
+#banner-sign {
+  background: linear-gradient(rgba(0,0,0,0.5), #58939b), url('banner3.jpg');
+}
+
 .signup {
   position: absolute;
+  margin-top: 200px;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 450px;
   box-shadow: 0 0 3px 0 rgba(00,0,0,0.3);
   background: #fff;
+  background: linear-gradient(rgba(0,0,0,0.5), #58939b), url('banner3.jpg');
 
   h1 {
     font-size: 40px;
@@ -62,6 +68,7 @@
   .checkbox {
     margin-bottom: 10px;
     margin-top: 10px;
+    left: 20px;
 
       span {
       font-weight: normal;
