--- a/app/assets/stylesheets/style_pages.scss
+++ b/app/assets/stylesheets/style_pages.scss
@@ -2,6 +2,7 @@
 @import 'bootstrap';
 @import 'bootstrap-sprockets';
 @import 'custom';
+@import url('https://fonts.googleapis.com/css?family=Gamja+Flower');
 
 * {
   margin: 0;
@@ -10,8 +11,12 @@
   font-family: sans-serif;
 }
 
-body {
-  padding-top: 60px;
+html, body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Gamja Flower';
+  font-size: 15px;
+  color: black;
 }
 
 section {
@@ -19,7 +24,7 @@ section {
 }
 
 #banner {
-  background: linear-gradient(rgba(0,0,0,0.5), #009688), url('banner.jpg');
+  background: linear-gradient(rgba(0,0,0,0.5), #768347), url('banner2.jpg');
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -62,46 +67,6 @@ section {
   }
 }
 
-#footer {
-  padding: 1px 20px 20px;
-  background: #efefef;
-  position: relative;
-
-  .title-text {
-    text-align: center;
-  }
-  .footer-row {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    p {
-      line-height: 35px;
-    }
-
-    h1 {
-      margin: 10px 0;
-    }
-  }
-
-  .footer-left,.footer-right {
-    flex-basis: 45%;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
-
-  .footer-right {
-    text-align: right;
-  }
-
-  h2 {
-    position: relative;
-    left: 45%;
-  }
-}
-
 #error_explanation {
   color: red;
 
@@ -110,7 +75,6 @@ section {
     margin: 0 0 30px 0;
   }
 }
-
 
 .users {
   list-style: none;
@@ -131,4 +95,228 @@ section {
 .img {
   margin-bottom: 9px;
   text-align: center;
+}
+
+.navbar {
+  background-color: black !important;
+}
+
+.navbar li a {
+    color: white !important;
+}
+
+.navbar li a:hover {
+    color: rgb(145, 160, 81) !important;
+}
+
+.carousel-inner img {
+  width: 100%;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 50%;
+}
+
+.carousel-caption h1 {
+  font-size: 400%;
+  text-transform: uppercase;
+  text-shadow: 5px 5px 15px #000;
+}
+
+.carousel-caption h3 {
+  font-size: 200%;
+  text-shadow: 2px 2px 10px #000;
+}
+
+.btn-primary {
+  background-color: rgb(68, 62, 28);
+  border: 1px solid white;
+}
+
+.btn-primary:hover {
+  background-color: rgb(62,44,100);
+  border: 1px solid white;
+}
+
+.jumbotron {
+  padding: 1rem;
+  border-radius: 0;
+}
+
+.welcome hr {
+  border-top: 2px solid rgba(62,44,100, 0.6);
+  width: 95%;
+  margin-bottom: 2rem;
+}
+
+.fa-react {
+  color: #81D8F7;
+}
+
+.fa-angular {
+  color: rgb(177,43,55);
+}
+
+.fa-css3 {
+  color: #D76537;
+}
+
+.fun {
+  width: 100%;
+}
+
+.social a {
+  font-size: 3em;/*1em = 16px*/
+  padding: 3rem;/*1rem = 1 "font-size" */
+}
+
+.fa-facebook {
+  color: #3b5998;
+}
+
+.fa-twitter {
+  color: #00aced;
+}
+
+.fa-google-plus-g {
+  color: #dd4b39;
+}
+
+.fa-instagram {
+  color: #517fa4;
+}
+
+.fa-youtube {
+  color: #bb0000;
+}
+
+footer {
+  background-color: #3f3f3f;
+  color: #d5d5d5;
+}
+
+hr.light {
+  border-top: 1px solid #d5d5d5;
+  width: 85%;
+  margin-left: 45px;
+}
+
+.light-100 {
+  border-top: 1px solid #d5d5d5;
+  width: 100%;
+}
+
+.logo_footer {
+  width: 20%;
+  padding: 10px 15px;
+}
+
+/* Typograph */
+
+h1,h2,h3,h4,h5 {
+  font-size: 30px;
+}
+
+/* Homepage */
+
+.browse-places {
+  text-align: center;
+}
+
+.owl-carousel {
+  padding-left: 270px;
+}
+
+.show-all-btn {
+  text-align: center;
+}
+
+.search-meal-btn {
+  padding: 15px 20px;
+  color: #fff;
+  background: #ffa803;
+  font-size: 14px;
+  font-weight: 400;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  cursor: pointer;
+}
+
+.btn-link {
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+  border-radius: 3px;
+  border: 1px solid #ffa803;
+  background: #ffa803;
+}
+
+.btn-link:hover {
+  color: #fff;
+  text-decoration: none;
+  background-color: #e38802;
+  border-color: 1px solid #e38802;
+}
+
+.d-flex {
+  text-align: center;
+}
+
+/*Media Query*/
+@media (max-width: 992px) {
+  .carousel-caption {
+    top: 20%;
+  }
+
+  .carousel-caption h1 {
+    font-size: 250%;
+  }
+
+  .carousel-caption h3 {
+    font-size: 160%;
+  }
+
+  .carousel-caption .btn {
+    font-size: 120%;
+  }
+}
+
+@media (max-width: 768px){
+  .carousel-caption {
+    top: 20%;
+  }
+
+  .carousel-caption h1{
+    font-size: 220%;
+  }
+
+  .carousel-caption h3{
+    font-size: 140%;
+    padding-bottom: 0.2rem;
+  }
+
+  .carousel-caption .btn{
+    font-size: 95%;
+    padding: 8px 14px;
+  }
+}
+
+@media (max-width: 576px){
+  .carousel-caption {
+    top: 10%;
+  }
+
+  .carousel-caption h1{
+    font-size: 150%;
+  }
+
+  .carousel-caption h3{
+    font-size: 110%;
+  }
+
+  .carousel-caption .btn {
+    font-size: 90%;
+    padding: 4px 8px;
+  }
 }
