--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,8 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <% flash.each do |message_type, message| %>
-      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-    <% end %>
+    <%= render "base/banner" %>
+    <%= render "shared/flash" %>
     <%= yield %>
     <%= render "layouts/footer" %>
   </body>
