--- a/app/views/admin/main_pages/dashboard.html.erb
+++ b/app/views/admin/main_pages/dashboard.html.erb
@@ -11,9 +11,8 @@
           <div class="icon">
             <i class="icon icon-bag"></i>
           </div>
-          <%= link_to admin_categories_path, class:"small-box-footer" do %>
-            <%= t "admin.more_info" %> <i class="fas fa-arrow-circle-right"></i>
-          <% end %>
+          <%= link_to t("admin.more_info"), admin_categories_path, class:"small-box-footer" %>
+          <i class="fas fa-arrow-circle-right"></i>
         </div>
       </div>
       <!-- col1 -->
@@ -26,10 +25,8 @@
           <div class="icon">
             <i class="ion ion-stats-bars"></i>
           </div>
-          <%= link_to admin_products_path, class: "small-box-footer" do %>
-            <%= t "admin.more_info" %>
-            <i class="fas fa-arrow-circle-right"></i>
-          <% end %>
+          <%= link_to t("admin.more_info"), admin_products_path, class: "small-box-footer" %>
+          <i class="fas fa-arrow-circle-right"></i>
         </div>
       </div>
       <!-- coll2 -->
@@ -43,7 +40,7 @@
             <i class="ion ion-person-add"></i>
           </div>
           <a href="#" class="small-box-footer">
-            <%= t "admin.more_info" %>
+            <%= link_to t("admin.more_info"), users_path %>
             <i class="fas fa-arrow-circle-right"></i>
           </a>
         </div>
