--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -1,18 +1,18 @@
 <tr>
-  <td><%= index + 1 %></td>
+  <td><%= product.id %></td>
   <td><%= product.name %></td>
   <td><%= product.information %></td>
   <td><%= product.price %>$</td>
   <td><%= product.old_price %>$</td>
   <td>
-    <%= link_to admin_category_product_path(product.category.id, product) do %>
+    <%= link_to admin_product_path(product) do %>
       <i class="fas fa-edit"></i>
     <% end %>
-    <%= link_to edit_admin_category_product_path(product.category.id, product) do %>
+    <%= link_to edit_admin_product_path(product) do %>
       <i class="fas fa-wrench"></i>
     <% end %>
-    <%= link_to admin_category_product_path(product.category.id, product), remote: true,
-      method: :delete, data: {confirm: t("admin.destroy_user.cf_delete")}, class: "delete-product" do %>
+    <%= link_to admin_product_path(product), remote: true, method: :delete,
+      data: {confirm: t("admin.destroy_user.cf_delete")}, class: "delete-product" do %>
       <i class="far fa-trash-alt"></i>
     <% end %>
   </td>
