--- a/app/views/base/_header.html.erb
+++ b/app/views/base/_header.html.erb
@@ -1,9 +1,9 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar">
   <div class="container">
     <nav>
-      <%= link_to t(".en"), locale: :en %>
-      <%= link_to t(".vi"), locale: :vi %>
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to t(".en"), locale: :en %></li>
+        <li><%= link_to t(".vi"), locale: :vi %></li>
         <li><%= link_to t("home.home_index"), admin_root_path %>
         <% if logged_in? %>
           <li class="dropdown">
@@ -17,10 +17,12 @@
               </div>
             <% end %>
             <div class="dropdown-menu">
-              <li><%= link_to t("user.profile"), admin_current_user %></li>
-              <li><%= link_to t("user.change_info"), "#" %></li>
-              <li class="divider"></li>
               <li>
+                <%= link_to t("user.profile"), "#", class: "dropdown-item" %>
+              </li>
+              <li class="dropdown-item"><%= link_to t("user.change_info"), "#" %></li>
+              <li class="divider"></li>
+              <li class="dropdown-item">
                 <%= link_to t("signin.signout"), admin_signout_path %>
               </li>
             </div>
