--- a/app/assets/stylesheets/style_pages.scss
+++ b/app/assets/stylesheets/style_pages.scss
@@ -273,6 +273,14 @@ h1,h2,h3,h4,h5 {
   text-align: center;
 }
 
+.amount {
+  padding-left: 900px;
+}
+
+.order {
+  padding-top: 85px;
+}
+
 /*Media Query*/
 @media (max-width: 992px) {
   .carousel-caption {
