--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,8 +1,10 @@
 <% if @cart_items.blank? %>
-  <h3 style="text-align: center;"><%= t "cart.empty_item" %></h3>
+  <h2 class="new-heading"><%= t "cart.empty_item" %></h2>
 <% else %>
-  <div class="container">
-    <h2><%= t "cart.my_cart" %></h2>
+  <div class="container">.
+    <h2 class="new-heading">
+      <%= t "cart.my_cart" %><i class="fas fa-shopping-cart"></i>
+    </h2>
     <div class="table">
       <table class="table">
         <thead class="thead-dark">
@@ -10,16 +12,19 @@
           <th scope="col"><%= t "product.name" %></th>
           <th scope="col"><%= t "product.price" %></th>
           <th scope="col"><%= t "product.quantity" %></th>
+          <th scope="col"><%= t "cart.total_amount" %></th>
           <th scope="col"><%= t "cart.action" %></th>
         </thead>
+        <tbody>
+          <%= render partial: "cart_item", collection: @cart_items %>
+        </tbody>
       </table>
-      <tbody>
-        <%= render partial: "cart_item", collection: @cart_items %>
-      </tbody>
+    </div>
+    <hr class="light-100">
+    <br/>
+    <div class="amount">
+      <h2 id="cart-total-amount"><%= t "cart.total_amount" %>-$<%= current_cart.total_amount %></h2>
+      <%= link_to t("cart.checkout"), new_order_path, class: "btn btn-primary" %>
     </div>
   </div>
-  <div class="amount">
-    <h2 id="cart-total-amount"><%= t "cart.total_amount" %> <%= current_cart.total_amount %>$</h2>
-  </div>
-    <%= link_to t("cart.checkout"), "#", class: "btn btn-primary" %>
 <% end %>
