--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -1,18 +1,10 @@
 <tr>
-  <td>
-    <%= image_tag(cart_item.product.display_image) %>
-  </td>
-  <td>
-    <%= cart_item.product.name %>
-  </td>
-  <td>
-    <%= cart_item.product.price %> x
-  </td>
-  <td>
-    <%= number_field_tag :quantity, cart_item.quantity %>
-  </td>
+  <td><%= image_tag(cart_item.product.display_image) %></td>
+  <td><%= cart_item.product_name %></td>
+  <td>$<%= cart_item.product_price %></td>
+  <td><%= number_field_tag :quantity, cart_item.quantity %></td>
   <td id="cart-price-<%= cart_item.id %>" data-price="<%= cart_item.product.price %>">
-    <%= cart_item.total %>$
+    $<%= cart_item.total %>
   </td>
   <td>
     <%= link_to cart_item_path(cart_item.id), remote: true, method: :delete, data: { confirm:
@@ -21,5 +13,3 @@
     <% end %>
   </td>
 </tr>
-<hr class="light-100">
-<br/>
